# flappy_bevy

./: .gitignore  Cargo.toml  bevy_flappy_bird-28149dadaaab520d.js  bevy_flappy_bird-41e2b43762ee09ab.js  bevy_flappy_bird-4a72b74a77672dbb.js  bevy_flappy_bird-826558d0e0115e1d.js  bevy_flappy_bird-cc6f8481496c174c.js  bevy_flappy_bird-e99178d962acc1c1.js  build.rs  index.html
.github/workflows/: ci.yaml  deploy-page.yaml  release.yaml
assets/: spritesheet.xcf
assets/sprites/cloud/: cloud_start.xcf
assets/sprites/pipe/: pipe_body.xcf  pipe_end.xcf
assets_raw/sounds/: flappy_song.mmpz
assets_raw/sprites/: bird.xcf  bird2.xcf  bird3.xcf  bird4.xcf
assets_raw/sprites/cloud/: cloud_end.xcf
assets_raw/sprites/hill/: hill.xcf  hill2.xcf  hill3.xcf  hill4.xcf
src/: _sound.rs  android.rs  background.rs  clouds.rs  game_controller.rs  main.rs  options.rs  pipes.rs  player.rs  sound.rs  ui.rs  window.rs
src/background/: clouds.rs  hills.rs
src/ui/: game_over.rs  settings.rs  window.rs
