[package]
name = "bevy_flappy_bird"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy_framepace = "0.6.0" #! breaks wasm
# bevy_pkv = "0.5.0"
rand = "0.8.5"
serde = "1.0.143"
winit = "0.26.1"
image = "0.24.3"

[dependencies.bevy]
version = "0.8.1"
default-features = false
# These are the remaining default features other than `bevy_audio` and `vorbis`
features = [
  "animation",
  "bevy_asset",
  # "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
  # "dynamic"  #!!! Disable before release
]

# [dependencies.bevy_kira_audio]
# version = "0.12"
# # `ogg` format support is enabled by default, disable if you don't want it
# default-features = false
# # enable the features you care about
# features = [
#   "wav",
# ]

[build-dependencies]
winres = "0.1.12"

[package.metadata.android]
package = "com.bewu.flappy"
apk_name = "flappy_bewu"
assets = "assets"
resources="res"

build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.application]
label = "Flappy Bevy"
icon = "@mipmap/ic_launcher"


[package.metadata.android.sdk]
target_sdk_version = 31

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"
